# flet-video

./: .docstr.yaml  .gitignore  404.html  CHANGELOG.md  README.md  appveyor.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
changelog/: index.html
docs/: index.md  video.md
docs/types/: playlist_mode.md  video_configuration.md  video_media.md  video_subtitle_configuration.md  video_subtitle_track.md
examples/: example_1.py
examples/video_example/: pyproject.toml
examples/video_example/src/: example_1.py  main.py
license/: index.html
search/: search_index.json
src/flet/video/: __init__.py  video.py
src/flet_video/: __init__.py  types.py  video.py
src/flutter/flet_video/: CHANGELOG.md  pubspec.yaml
src/flutter/flet_video/lib/src/: video.dart
src/flutter/flet_video/lib/src/utils/: video.dart
types/playlist_mode/: index.html
types/video_configuration/: index.html
types/video_media/: index.html
types/video_subtitle_configuration/: index.html
types/video_subtitle_track/: index.html
video/: index.html
