[project]
name = "flet-video"
version = "0.2.0"
description = "Video control for Flet"
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet.dev/docs/controls/video"
Repository = "https://github.com/flet-dev/flet-video"
Issues = "https://github.com/flet-dev/flet-video/issues"

[tool.setuptools.package-data]
"flutter.flet_video" = ["**/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mike",
    "markdown>=3.6",
    "pymdown-extensions",
    "mkdocs-glightbox",
    "pygments>=2.16",
]

[tool.uv.sources]
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
