[project]
name = "flet-video-example"
version = "1.0.0"
description = "flet-video-example"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "flet-video",
  "flet",
]

# Docs: https://flet.dev/docs/publish
[tool.flet]
org = "com.mycompany"
product = "flet-video-example"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"
